# rag_pipeline

./: .env.template  .gitignore  CLEANUP_COMPLETE.md  COPY_TO_TEMPLATE_INSTRUCTIONS.md  DEPLOYMENT_SETUP_COMPLETE.md  FRONTEND_UPDATE_COMPLETE.md  HOW_IT_WORKS_DEMO.md  Implementation.md  QDRANT_CONFIGURATION_COMPLETE.md  QUICK_START_GUIDE.md  README.md  SETUP_COMPLETE.md  Specifications.md  TEMPLATE_MAIN.py  TEMPLATE_MODELS.py  TEMPLATE_QDRANT_MANAGER.py  TEMPLATE_READY.md  TEMPLATE_SETUP_GUIDE.md  TEST_RESULTS_SUMMARY.md  pyproject.toml  start_backend.sh  start_frontend.sh
.kiro/specs/rag-fullstack-application/: .config.kiro  design.md  requirements.md  tasks.md
ai_frontend_template/: .gitignore  INDEPENDENCE_VERIFICATION.md  README.md  start_backend.sh  start_frontend.sh
ai_frontend_template/backend/: .env.example  pyproject.toml
ai_frontend_template/backend/src/: main.py  models.py  qdrant_manager.py
ai_frontend_template/backend/tests/: test_api_collections.py
ai_frontend_template/frontend/: TASKS_15.2-15.6_SUMMARY.md  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
ai_frontend_template/frontend/src/: App.css  index.css
ai_frontend_template/frontend/tests/: App.test.tsx
backend/: .env.example  README.md  TASK_11_SUMMARY.md  TASK_12_SUMMARY.md  TASK_9_SUMMARY.md  pytest.ini
backend/src/: chunking_strategy.py  embedding_manager.py  llm_client.py  main.py  models.py  qdrant_manager.py  retrieval_pipeline.py
backend/tests/: conftest.py  test_api_collections.py  test_api_query.py  test_api_upload.py  test_chunking_strategy.py  test_embedding_manager.py  test_error_handling.py  test_llm_client.py  test_models.py  test_qdrant_manager.py  test_retrieval_pipeline.py
frontend/: .env.example  COLLECTION_MANAGEMENT_COMPONENTS.md  jest.config.ts  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/components/: ChatInterface.module.css  ChatInterface.tsx  CollectionCreator.tsx  (+1 more)
frontend/tests/: setup.ts
(+18 files in other folders)
