[project]
name = "rag-fullstack-application"
version = "0.1.0"
description = "Full-stack RAG system with multi-embedding retrieval"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "docling>=2.7.0",
    "chonkie>=0.3.0",
    "openai>=1.54.0",
    "numpy>=1.26.0",
    "torch==2.6.0",
    "transformers>=4.46.0",
    "flatbuffers>=25.12.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
